# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  24 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  -livecd/files/Getting_Online.txt:
  Removing livecd/files/Getting_Online.txt since it was quite outdated.

  24 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO, catalyst,
  README:
  Updated for new git repo.

  29 May 2008; Chris Gianelloni <wolf31o2@gentoo.org> TODO, catalyst,
  targets/support/livecdfs-update.sh:
  Add gconf settings for gnome-screensaver to disable locking by default. This
  is 2.0.6 final.

  14 May 2008; Andrew Gaffney <agaffney@gentoo.org> arch/arm.py:
  Add armv5tel to arm host list

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  If we don't have a distcc user, we need to reinstall distcc, even if it's
  been built with the right USE. This mainly affects stage1/stage2.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  We need to run distcc-config --install, since we won't be installing into
  ROOT=/ for stage1, and we have to use --noreplace to keep from wiping any
  installed versions of distcc.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org> TODO:
  Add a couple of distcc-related items to TODO.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/stage4/stage4-preclean-chroot.sh:
  We don't want to run setup_myfeatures in preclean, but still want to update
  the environment and show our debug information.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/stage4/stage4-preclean-chroot.sh,
  targets/support/chroot-functions.sh:
  Remove the die on LIBDIR check, since it won't be set on non-multilib